(fix) removed useless scrollbar style + fixed header svg errors

--- a/styles/scrollbar.css
+++ b/styles/scrollbar.css
@@ -1,5 +1,5 @@
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 0px;
 }
 
 /* Track */
